# flattune

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  build.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
configs/: athletes-prompts.json  athletes-qa.yml
docs/: api-reference.md  benchmarking.md  cli-reference.md  configuration.md  dataset-types.md  getting-started.md  teach-framework.md
src/flattune/: __init__.py  __main__.py  config.py
src/flattune/benchmark/: __init__.py  reporter.py  runner.py
src/flattune/dataset/: __init__.py  builder.py  split.py
src/flattune/dataset/generators/: __init__.py  base.py  classification.py  comparison.py  concept.py  conversation.py  custom.py  extraction.py  facts.py  glossary.py  procedure.py  qa.py  safety.py  summary.py
src/flattune/exporter/: __init__.py  exporter.py
src/flattune/flatseek/: __init__.py  auto.py  cli_provider.py  library_provider.py  provider.py
src/flattune/lmstudio/: __init__.py  client.py
src/flattune/ollama/: __init__.py  client.py
src/flattune/teach/: __init__.py  cli.py  knowledge_graph.py  pipeline.py  registry.py
src/flattune/teach/generators/: __init__.py  base.py  qa.py  sql.py  tool_call.py
src/flattune/teach/parsers/: __init__.py  base.py  flatseek.py  (+4 more)
src/flattune/trainer/: __init__.py  base.py  config.py  factory.py  transformers_trainer.py  unsloth_trainer.py
src/flattune/utils/: __init__.py  fs.py  hash.py  logging.py  reproducibility.py
tests/: conftest.py  test_athletes_sample.py  test_build_planner.py  test_build_registry.py  test_config.py  test_content_analyzer.py  test_generators.py  test_source_detector.py  test_teach_registry.py  test_utils.py
(+9 files in other folders)
